--- a/jestOutput/lcov-report/client/src/PlayButton.jsx.html
+++ b/jestOutput/lcov-report/client/src/PlayButton.jsx.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Code coverage report for client/src/Header.jsx</title>
+    <title>Code coverage report for client/src/PlayButton.jsx</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../prettify.css" />
     <link rel="stylesheet" href="../../base.css" />
@@ -16,28 +16,28 @@
 <div class='wrapper'>
   <div class='pad1'>
     <h1>
-      <a href="../../index.html">All files</a> / <a href="index.html">client/src</a> Header.jsx
+      <a href="../../index.html">All files</a> / <a href="index.html">client/src</a> PlayButton.jsx
     </h1>
     <div class='clearfix'>
       <div class='fl pad1y space-right2'>
         <span class="strong">0% </span>
         <span class="quiet">Statements</span>
-        <span class='fraction'>0/18</span>
-      </div>
-      <div class='fl pad1y space-right2'>
-        <span class="strong">100% </span>
-        <span class="quiet">Branches</span>
-        <span class='fraction'>0/0</span>
+        <span class='fraction'>0/13</span>
       </div>
       <div class='fl pad1y space-right2'>
         <span class="strong">0% </span>
-        <span class="quiet">Functions</span>
+        <span class="quiet">Branches</span>
         <span class='fraction'>0/2</span>
       </div>
       <div class='fl pad1y space-right2'>
         <span class="strong">0% </span>
+        <span class="quiet">Functions</span>
+        <span class='fraction'>0/1</span>
+      </div>
+      <div class='fl pad1y space-right2'>
+        <span class="strong">0% </span>
         <span class="quiet">Lines</span>
-        <span class='fraction'>0/16</span>
+        <span class='fraction'>0/13</span>
       </div>
     </div>
   </div>
@@ -77,25 +77,7 @@
 32
 33
 34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47</td><td class="line-coverage quiet"><span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
+35</td><td class="line-coverage quiet"><span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
@@ -103,18 +85,13 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -124,9 +101,8 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -139,48 +115,36 @@
 <span class="cstat-no" title="statement not covered" >import PropTypes from 'prop-types';</span>
 <span class="cstat-no" title="statement not covered" >import { hot } from 'react-hot-loader';</span>
 <span class="cstat-no" title="statement not covered" >import style from './styles/header.css';</span>
-<span class="cstat-no" title="statement not covered" >import { Button } from 'reactstrap';</span>
-<span class="cstat-no" title="statement not covered" >import { ListGroup } from 'react-bootstrap/lib/ListGroup';</span>
-<span class="cstat-no" title="statement not covered" >import { ListGroupItem } from 'react-bootstrap/lib/ListGroupItem';</span>
 <span class="cstat-no" title="statement not covered" >import classNames from 'classnames';</span>
-<span class="cstat-no" title="statement not covered" >import PlayButton from './PlayButton.jsx';</span>
-<span class="cstat-no" title="statement not covered" >import FollowButton from './FollowButton.jsx';</span>
-<span class="cstat-no" title="statement not covered" >import EtcButton from './EtcButton.jsx';</span>
 &nbsp;
-<span class="cstat-no" title="statement not covered" >console.log('BOOTSTRAP BUTTON', Button);</span>
+var PlayBtnClass = <span class="cstat-no" title="statement not covered" >classNames(style.textButton, style.play);</span>
 &nbsp;
-var <span class="fstat-no" title="function not covered" >txtBtnClass = <span class="cstat-no" title="statement not covered" ><span class="cstat-no" title="statement not covered" >(</span>str, isFollowed) =&gt;</span></span>
-  classNames(style.textButton, {
-    [style.play]: str === 'PLAY',
-    [style.follow]: str === 'FOLLOW',
-    [style.etc]: str === 'ETC'
-  });
+class PlayButton extends Component {
+<span class="fstat-no" title="function not covered" >  constructor(</span>props) <span class="cstat-no" title="statement not covered" >{</span>
+<span class="cstat-no" title="statement not covered" >    super(props);</span>
+<span class="cstat-no" title="statement not covered" >    this.state = {</span>
+      playing: false
+    };
+<span class="cstat-no" title="statement not covered" >    this.playToggle = this.playToggle.bind(this);</span>
+  }
 &nbsp;
-const <span class="fstat-no" title="function not covered" >Header = <span class="cstat-no" title="statement not covered" >(</span>{ artist, handleFollowToggle }) =&gt; <span class="cstat-no" title="statement not covered" >{</span></span>
-  // background styling has to be done in-line.
-  const blackBG = <span class="cstat-no" title="statement not covered" >{</span>
-    //linear-gradient(transparent, black),
-    background: `linear-gradient(transparent -30%, rgb(24,24,24)), url(${artist.artistImages[0]}) no-repeat top`,
-    backgroundSize: 'cover'
-  };
+  playToggle() {
+<span class="cstat-no" title="statement not covered" >    this.setState({</span>
+      playing: !this.state.playing
+    });
+  }
 &nbsp;
-<span class="cstat-no" title="statement not covered" >  return (</span>
-    &lt;div style={blackBG} className={style.artistPortraitBG}&gt;
-      &lt;div className={style.scrollSectionContainer}&gt;
-        &lt;div className={style.monthlyListeners}&gt;{artist.followersNumber.toLocaleString('en')} Followers&lt;/div&gt;
-        &lt;h1 className={style.artistName}&gt;{artist.artistName}&lt;/h1&gt;
-        &lt;div className={style.buttonSection}&gt;
-          &lt;PlayButton /&gt;
-          &lt;FollowButton artist={artist} handleFollowToggle={handleFollowToggle} /&gt;
-          &lt;EtcButton /&gt;
-        &lt;/div&gt;
-        &lt;div&gt;{artist.about.Biography}&lt;/div&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
-  );
-};
+  render() {
+    var PlayBtnTXT = <span class="cstat-no" title="statement not covered" >!this.state.playing ? 'PAUSE' : 'PLAY';</span>
+<span class="cstat-no" title="statement not covered" >    return (</span>
+      &lt;button className={PlayBtnClass} onClick={this.playToggle}&gt;
+        {PlayBtnTXT}
+      &lt;/button&gt;
+    );
+  }
+}
 &nbsp;
-export default hot(module)(Header);
+export default hot(module)(PlayButton);
 &nbsp;</pre></td></tr>
 </table></pre>
 <div class='push'></div><!-- for sticky footer -->
